short-service/templates/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: short-app-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    components: frontend
