short-service/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: demo.test
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: short-app-cluster-ip
                port:
                  number: 80
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: short-api-cluster-ip
                port:
                  number: 300
